<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magician_ur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matteo.dallevedove@unitn.it">Matteo Dalle Vedove</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rqt_controller_manager</exec_depend>
  <exec_depend>moveit2</exec_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
